# python_practice

./: .gitignore  README.md  old-requirements.lock.txt  pyproject.toml  readme.md
chapter 7/: bicycle.py
chapter10/: query_cleaning.py
chapter10/bark/: bark_app.py  commands.py  database_manager.py  persistance_layer.py
chapter2/: listing2.1.raw.py  listing2.1.refactor.py  rps.py
chapter3/: greeter.py  greeter_firstpass.py  greeter_refactor.py
chapter4/: gen.py
chapter5/: initial_example.py  listing5.1.raw.py
chapter5/listing 5.1 raw/: product.py
chapter5/listing_5.1_exercise/: product.py  test_product.py
chapter5/listing_5.3_exercise/: shopping_cart.py  test_cart.py  test_product.py
chapter5/listing_5.5_exercise/: product.py  test_product.py
chapter6/: .gitignore  bark.py  business_logic.py  cli_app.py  commands.py  database_manager.py  db.py  presentation_layer.py
chapter7/: bicycle.py
chapter7/bark/: bark_app.py  commands.py
chapter8/: cooperative_cats.py  dane_hillard_bicycle.py  dh_cats.py  learn_abcs.py
chapter8/bark/: .gitignore  commands.py
chapter9/: book.py  book_w_author.py  random_food.py
docs/: refs.txt
