[tool.poetry]
name = "practicespythonpro"
version = "0.1.0"
description = ""
authors = ["bdewhirst <b.dewhirst@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
